[build-system]
requires = ["flit_core >=2,<4", "wheel"]
build-backend = ["flit_core.buildapi", "flit_core.wheel"]

[tool.flit.metadata]
module = "pyglet"
author = "Alex Holkner"
author-email = "alex.holkner@gmail.com"
home-page = "http://pyglet.org/"
description-file = "README.md"
requires-python=">=3.6"
license='BSD'

[tool.flit.metadata.requires-extra]
test = ["pytest"]
doc = ["sphinx"]

[tool.flit.sdist]
include = ["pyglet"]
#exclude = ["doc/*.html"]